--- a/src/components/Sidebar/index.scss
+++ b/src/components/Sidebar/index.scss
@@ -122,10 +122,8 @@
         color: #4d4d4e;
       }
 
-      &:hover {
-        .anchor-icon {
+      &:hover svg{
           color: #ffd700;
-        }
       }
     }
   }
